--- a/css/custom.css
+++ b/css/custom.css
@@ -70,7 +70,7 @@ button:hover, .btn:hover {
 
 /* Header Styles */
 header {
-  background-color: white;
+  background-color: white !important;;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   position: sticky;
   width: 100%;
