--- a/css/contact.css
+++ b/css/contact.css
@@ -594,8 +594,8 @@ header {
  /* Contact Section */
  .contact {
     padding: 50px 0;
-    background-color: #121d3a;
-    color: white;
+    background-color: #f2f2f2;
+    color: var(--secondary-color);
     position: relative;
     overflow: hidden;
 }
@@ -1106,3 +1106,4 @@ textarea.form-control {
         padding: 12px 20px;
     }
 }
+
